# unitree_d1_controller

./: README.md  d1_jointangles_csv.ino  serial_to_jointstate.py
arm_control/: package.xml  setup.cfg  setup.py
arm_control/arm_control/: arm_node.py  ik_solver.py
arm_control/urdf/: d1.urdf
arm_driver/: CMakeLists.txt  package.xml
arm_driver/launch/: arm_driver.launch.py
arm_driver/src/: D1Wrapper.cpp  D1Wrapper.hpp  servo_driver.cpp
d1_sdk/install/: local_setup.sh  setup.sh
d1_sdk/install/marm_code/share/marm_code/: package.bash  package.zsh
d1_sdk/log/: latest_build
d1_sdk/src/: get_arm_joint_angle.cpp  joint_angle_control.cpp
esp32_arm_bridge/: jointstate_to_armcmd.py
